--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "devDependencies": {
     "@types/node": "^16.9.1",
     "git-commit-msg-linter": "^3.2.8",
+    "ts-standard": "^10.0.0",
     "typescript": "^4.4.3"
   }
 }
