--- a/package.json
+++ b/package.json
@@ -5,9 +5,20 @@
   "author": "Pietro Verdile <pietro.verdile@visto.global>",
   "license": "MIT",
   "devDependencies": {
+    "@types/jest": "^27.0.1",
     "@types/node": "^16.9.1",
     "git-commit-msg-linter": "^3.2.8",
+    "husky": "^7.0.0",
+    "jest": "^27.2.0",
+    "ts-jest": "^27.0.5",
+    "ts-node": "^10.2.1",
     "ts-standard": "^10.0.0",
     "typescript": "^4.4.3"
+  },
+  "scripts": {
+    "prepare": "husky install",
+    "lint": "ts-standard",
+    "test": "jest",
+    "test:staged": "jest"
   }
 }
