--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "scripts": {
     "prepare": "husky install",
     "lint": "ts-standard",
-    "test": "jest",
+    "test": "jest --watch",
     "test:staged": "jest"
   }
 }
