--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "devDependencies": {
     "@types/jest": "^27.0.1",
     "@types/node": "^16.9.1",
+    "@types/validator": "^13.6.3",
     "git-commit-msg-linter": "^3.2.8",
     "husky": "^7.0.0",
     "jest": "^27.2.0",
@@ -24,5 +25,8 @@
     "test:integration": "yarn test --watch -c jest.integration.config.ts",
     "test:staged": "yarn test --findRelatedTests .",
     "test:ci": "yarn test --coverage"
+  },
+  "dependencies": {
+    "validator": "^13.6.0"
   }
 }
